# aws-manager

./: .gitignore  README.md  babel.config.js  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.mjs  webpack.renderer.config.js
src/: App.vue  index.html  main.js  preload.js  renderer.js  tabs.js
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  aws.rs  aws_credential_loader.rs  lib.rs  main.rs
src-tauri/src/aws/: credentials.rs  ecs.rs  rds.rs
src-tauri/src/aws/credentials/: reader.rs  setter.rs  writer.rs
src-tauri/src/aws/ecs/: ssh_session.rs
src-tauri/src/aws/rds/: fetcher.rs  generator.rs  instances.rs  session_password.rs
src/assets/css/: tailwind.css
src/components/: CredentialsList.vue  InstancesList.vue  ProfilesList.vue
src/css/: index.css
src/main/: app.js  credentials.js  ipc_router.js  rds.js  signer.js
src/renderer/: aws_credentials_manager.js  rds_ipc_router.js  rds_manager.js
