[package]
name = "app"
version = "0.2.2"
description = "AWS Manager"
authors = ["oss@dbl.works"]
license = "CC-BY-NC-SA-3.0"
repository = "https://github.com/dbl-works/rds-manager"
default-run = "app"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
dirs = "5.0.1"
aws-config = "0.55.3"
aws-sdk-rds = "0.28.0"
rust-ini = "0.19"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = ["api-all"] }
regex = { version = "1.7.0", features = ["pattern"] }
aws-sdk-signer = "0.28.0"
aws-smithy-http = "0.55.3"
aws-types = "0.55.3"
aws-sig-auth = "0.55.3"
http = "0.2.9"
aws-credential-types = "0.55.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
