[package]
name = "app"
version = "0.2.4"
description = "AWS Manager"
authors = ["oss@dbl.works"]
license = "CC-BY-NC-SA-3.0"
repository = "https://github.com/dbl-works/rds-manager"
default-run = "app"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0.140"
dirs = "6.0.0"
aws-config = "1.8.2"
aws-sdk-rds = "1.97.0"
rust-ini = "0.21.2"
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2.6.2" }
regex = { version = "1.11.1" }
aws-sdk-signer = "1.75.0"
aws-smithy-http = "0.62.1"
aws-smithy-types = "1.3.2"
aws-types = "1.3.7"
aws-sig-auth = "0.60.3"
http = "1.3.1"
aws-credential-types = "1.2.3"
aws-runtime = "1.5.9"
aws-smithy-runtime-api = { version = "1.8.3", features = ["test-util"] }
aws-smithy-async = "1.2.5"
aws-sigv4 = "1.3.3"
url = "2.5.4"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
